Get the main services running.

--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,9 @@
 		"mkraemer/react-inotify": "dev-master",
 		"phansys/getid3": "2.1.*@dev",
 		"icanboogie/inflector": "dev-master",
-		"predis/predis-async": "dev-master"
+		"predis/predis-async": "dev-master",
+		"predis/predis": "0.8.*@dev",
+		"php-ffmpeg/php-ffmpeg": "0.3.*@dev",
+		"react/promise": "1.0.*@dev"
 	}
 }
