Move music-watch to amused, add new amuse command line script.

--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
 		"mkraemer/react-inotify": "dev-master",
 		"phansys/getid3": "2.1.*@dev",
 		"icanboogie/inflector": "dev-master",
+		"predis/predis": "0.8.*@dev",
 		"predis/predis-async": "dev-master",
 		"php-ffmpeg/php-ffmpeg": "0.3.*@dev",
 		"react/promise": "1.0.*@dev"
