--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
 		"predis/predis": "0.8.*@dev",
 		"predis/predis-async": "dev-master",
 		"php-ffmpeg/php-ffmpeg": "0.3.*@dev",
-		"react/promise": "1.0.*@dev"
+		"react/promise": "1.0.*@dev",
+		"react/mysql": "dev-master"
 	},
 	"autoload": {
 		"psr-0": {
